--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,9 +39,175 @@ body.dark{
     flex-shrink: 0;
     display: flex;
     background-color: #FFFFFF;
-    box-shadow: 0 3px 6px #515050;
+    box-shadow: 0 3px 6px #e5e5e5;
+}
+.sidebar-wrp .mainMenu-list img{
+    filter: brightness(0) saturate(100%) invert(74%) sepia(41%) saturate(4%) hue-rotate(123deg) brightness(91%) contrast(84%);
 }
 
+.sidebar-mainMenu{
+    border-right: 1px solid #dedede;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+}
+
+.logo-wrp{
+    display: block;
+    cursor: pointer;
+}
+
+.logo-wrp .logo{
+    width: 36px;
+    height: 36px;
+}
+
+.sidebar-wrp ul{
+    list-style: none;
+    padding: 0;
+}
+.sidebar-wrp ul li{
+    padding: 0;
+    cursor: pointer;
+}
+
+/* Main menu style start */
+.sidebar-wrp .mainMenu-list{
+    padding: 10px 10px;
+}
+
+.sidebar-wrp .mainMenu-listItem,
+.sidebar-wrp .sidebar-profileMenu-item{
+    padding: 10px 10px;
+    text-align: center;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s;
+}
+.sidebar-wrp .mainMenu-listItem:hover,
+.sidebar-wrp .mainMenu-listItem.active,
+.sidebar-subMenu-listItem:hover,
+.sidebar-subMenu-listItem.active{
+    background-color: #FFFFFF;
+    box-shadow: 0 0px 10px #d2d2d2;
+}
+
+.mainMenu-listItem-icon,
+.sidebar-profileMenu-item img{
+    width: 20px;
+    height: 20px;
+}
+.sidebar-wrp .mainMenu-listItem:hover .mainMenu-listItem-icon{
+    filter: brightness(0) saturate(100%) invert(0%) sepia(4%) saturate(17%) hue-rotate(69deg) brightness(100%) contrast(100%);
+}
+/* Main menu style end */
+
+/* Profile menu style start */
+.sidebar-profileMenu{
+    padding: 10px 10px;
+    margin-top: auto;
+}
+.sidebar-wrp .sidebar-profileMenu-item:hover img{
+    opacity: 0.8;
+}
+.sidebar-profileMenu-item img{
+    filter: brightness(0) saturate(100%) invert(0%) sepia(4%) saturate(17%) hue-rotate(69deg) brightness(100%) contrast(100%);
+    transition: all 0.3s;
+}
+/* Profile menu style end */
+
+/* Sidebar submenu style start */
+.sidebar-subMenu{
+    padding: 20px 15px;
+}
+
+.sidebar-subMenu-titleWrp{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+    flex-wrap: nowrap;
+    padding: 5px 0 8px 0;
+}
+
+.sidebar-subMenu-title{
+    font-size: 1.6rem;
+    text-transform: capitalize;
+    color: #000000;
+}
+
+.openSubmenu{
+    padding: 5px;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+.openSubmenu:hover{
+    background-color: #FFFFFF;
+    box-shadow: 0 0px 10px #d2d2d2;
+}
+.openSubmenu img{
+    width: 10px;
+    height: 10px;
+    filter: brightness(0) saturate(100%) invert(74%) sepia(41%) saturate(4%) hue-rotate(123deg) brightness(91%) contrast(84%);
+}
+.openSubmenu:hover img{
+    filter: brightness(0) saturate(100%) invert(0%) sepia(4%) saturate(17%) hue-rotate(69deg) brightness(100%) contrast(100%);
+}
+
+.searchbar-box-wrp{
+    margin-top: 14px;
+}
+.searchbar-box{
+    min-width: 100px;
+    background-image: url('../img/icons/search.svg');
+    background-repeat: no-repeat;
+    background-size: 16px 16px;
+    background-position: 10px 50%;
+    padding: 8px 5px 8px 35px;
+    border: 1px solid #dedede;
+    border-radius: 8px;
+    font-size: 1.3rem;
+    line-height: 1;
+}
+
+.sidebar-subMenu-listWrp{
+    margin-top: 15px;
+}
+
+.sidebar-subMenu-listTitle{
+    font-size: 1.4rem;
+    line-height: 1.2;
+    color: #6c6c6c;
+    font-weight: 500;
+    padding: 0 8px;
+    margin-bottom: 5px;
+}
+
+.sidebar-wrp .sidebar-subMenu-listItem{
+    padding: 6px 20px 6px 8px;
+    font-size: 1.5rem;
+    line-height: 1.2;
+    word-break: break-all;
+    font-weight: 600;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: nowrap;
+    position: relative;
+    border-radius: 8px;
+}
+
+.sidebar-subMenu-listItem img{
+    width: 18px;
+    height: 18px;
+    filter: brightness(0) saturate(100%) invert(0%) sepia(4%) saturate(17%) hue-rotate(69deg) brightness(100%) contrast(100%);
+}
+/* Sidebar submenu style end */
 .right-content{
   flex: 1;
   padding: 0;
@@ -60,4 +226,25 @@ header{
 
 .main-content{
     padding: 25px 20px;
+}
+
+
+/* This is for dark theme */
+body.dark .sidebar-wrp{
+    background-color: #000000;
+    color: #FFFFFF;
+}
+
+body.dark .sidebar-wrp .mainMenu-list .mainMenu-listItem-icon{
+    filter: brightness(0) saturate(100%) invert(74%) sepia(41%) saturate(4%) hue-rotate(123deg) brightness(91%) contrast(84%);
+}
+body.dark .sidebar-wrp .mainMenu-listItem:hover .mainMenu-listItem-icon{
+    filter: brightness(0) saturate(100%) invert(100%) sepia(3%) saturate(13%) hue-rotate(81deg) brightness(106%) contrast(106%);
+}
+
+body.dark .mainMenu-listItem:hover{
+    background-color: #515050;
+}
+body.dark .mainMenu-listItem:hover .mainMenu-listItem-icon{
+    filter: brightness(0) saturate(100%) invert(100%) sepia(3%) saturate(13%) hue-rotate(81deg) brightness(106%) contrast(106%);
 }
