--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,14 +23,14 @@ body{
     color: #000000;
 }
 
-body.dark{
-    color: #FFFFFF;
-}
-
 button:focus, 
 input:focus,
 textarea:focus{
     outline: none;
+}
+
+input[type="text"]:disabled{
+    cursor: no-drop;
 }
 
 .main-layout{
@@ -97,11 +97,22 @@ textarea:focus{
     align-items: center;
     transition: all 0.3s;
 }
+
+.sidebar-wrp .mainMenu-listItem.sidebar-profileMenu-item{
+    margin-bottom: 0;
+}
+
 .sidebar-wrp .mainMenu-listItem:hover,
 .sidebar-wrp .mainMenu-listItem.active,
 .sidebar-subMenu-listItem:hover{
     background-color: #FFFFFF;
     box-shadow: 0 0px 10px #d2d2d2;
+}
+
+.sidebar-wrp .mainMenu-listItem.sidebar-profileMenu-item:hover,
+.sidebar-wrp .mainMenu-listItem.sidebar-profileMenu-item.active{
+    background-color: none;
+    box-shadow: none;
 }
 
 .mainMenu-listItem-icon,
@@ -120,7 +131,8 @@ textarea:focus{
     padding: 10px 10px;
     margin-top: auto;
 }
-.sidebar-wrp .sidebar-profileMenu-item:hover img{
+.sidebar-wrp .sidebar-profileMenu-item:hover img,
+.sidebar-wrp .sidebar-profileMenu-item.active img{
     opacity: 0.8;
 }
 .sidebar-profileMenu-item img{
@@ -376,24 +388,159 @@ header{
     padding: 25px 20px;
 }
 
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.theme-switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 26px;
+}
+
+.theme-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0; left: 0;
+  right: 0; bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+.theme-switch input:checked + .slider {
+  background-color: #4cafef;
+}
+
+.theme-switch input:checked + .slider:before {
+  transform: translateX(24px);
+}
 
 /* This is for dark theme */
-body.dark .sidebar-wrp{
-    background-color: #000000;
+body.dark,
+body.dark .right-content,
+body.dark header{
+    background-color: #383838;
+}
+
+body.dark header{
+    border-bottom: 1px solid #fcfcfc;
+}
+body.dark .right-content,
+body.dark header{
     color: #FFFFFF;
 }
 
-body.dark .sidebar-wrp .mainMenu-list .mainMenu-listItem-icon{
+body.dark .sidebar-wrp,
+body.dark .sidebar-subMenu-stickyContent,
+body.dark .sidebar-subMenu{
+    background-color: #000000;
+    color: #FFFFFF;
+
+}
+
+body.dark .sidebar-wrp .mainMenu-list .mainMenu-listItem-icon,
+body.dark .sidebar-profileMenu-item img{
     filter: brightness(0) saturate(100%) invert(74%) sepia(41%) saturate(4%) hue-rotate(123deg) brightness(91%) contrast(84%);
 }
 body.dark .sidebar-wrp .mainMenu-listItem:hover .mainMenu-listItem-icon{
     filter: brightness(0) saturate(100%) invert(100%) sepia(3%) saturate(13%) hue-rotate(81deg) brightness(106%) contrast(106%);
 }
 
-body.dark .mainMenu-listItem:hover{
+body.dark .mainMenu-listItem:hover,
+body.dark .mainMenu-listItem.active,
+body.dark .sidebar-profileMenu-item:hover,
+body.dark .sidebar-profileMenu-item.active,
+body.dark .openSubmenu:hover,
+body.dark .sidebar-subMenu-listItem:hover{
     background-color: #515050;
 }
 body.dark .mainMenu-listItem:hover .mainMenu-listItem-icon,
-body.dark .mainMenu-listItem.active .mainMenu-listItem-icon{
+body.dark .mainMenu-listItem.active .mainMenu-listItem-icon,
+body.dark .sidebar-profileMenu-item:hover img,
+body.dark .sidebar-profileMenu-item.active img,
+body.dark .sidebar-subMenu-listItem img{
     filter: brightness(0) saturate(100%) invert(100%) sepia(3%) saturate(13%) hue-rotate(81deg) brightness(106%) contrast(106%);
+}
+
+body.dark .sidebar-wrp .mainMenu-listItem:hover, 
+body.dark .sidebar-wrp .mainMenu-listItem.active, 
+body.dark .sidebar-subMenu-listItem:hover,
+body.dark .openSubmenu:hover{
+    box-shadow: none;
+}
+
+body.dark .sidebar-subMenu{
+    color: #FFFFFF;
+}
+
+body.dark .openSubmenu img{
+    filter: brightness(0) saturate(100%) invert(58%) sepia(0%) saturate(1849%) hue-rotate(188deg) brightness(87%) contrast(88%);
+}
+
+body.dark .searchbar-box{
+    border: 1px solid #858585;
+    background-color: #000000;
+    color: #FFFFFF;
+}
+
+body.dark .sidebar-subMenu-title{
+    color: #FFFFFF;
+}
+
+body.dark .sidebar-subMenu-listTitle{
+    color: #858585;
+}
+
+body.dark .sidebar-subMenu-SublistItem,
+body.dark .sidebar-subMenu-SublistItem a{
+    color: #c7c7c7;
+}
+
+@media screen and (max-width:767px) {
+    .sidebar-wrp{
+        box-shadow: none;
+    }
+    .sidebar-subMenu{
+        position: absolute;
+        top: 0;
+        left: 61px;
+        height: 100%;
+        z-index: 1;
+        border-right: 1px solid #dedede;
+    }
+    .sidebar-subMenu.open {
+        width: calc(100% - 70px);
+    }
+
+    .sidebar-wrp .sidebar-subMenu.open .sidebar-subMenu-listItem{
+        min-width: 100%;
+        max-width: 100%;
+    }
+
+    .right-content{
+        width: calc(100% - 124px);
+        flex: unset;
+        margin-left: 62px;
+    }
 }
