--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,6 +525,8 @@ body.dark .sidebar-subMenu-SublistItem a{
     .sidebar-wrp{
         box-shadow: none;
         max-height: 100%;
+        min-height: 100vh;
+        height: 100%;
     }
     .sidebar-subMenu{
         position: absolute;
@@ -550,4 +552,5 @@ body.dark .sidebar-subMenu-SublistItem a{
         margin-left: 62px;
     }
 }
+
 
